@@ -30,6 +30,7 @@ Important changes in 1.6 (2019-01-XX) UNRELEASED
 * Bugfix: Force mpeg format for DVDs to avoid misdetections.
 * Bugfix: Force mpegts format for Blurays to avoid misdetections.
 * Bugfix: Take DVD chapter duration from IFO as probed playtime from VOB segment is sometimes wrong.
+* Bugfix: Take Bluray chapter duration from directory as probed playtime from MTS segment is sometimes wrong.
 * Feature: Add MOV target format
 * Feature: Add AIFF target format
 * Feature: Smart conversion option ("Smart Transcode")
@@ -38,6 +39,7 @@ Important changes in 1.6 (2019-01-XX) UNRELEASED
 * Feature: Do not "upgrade" mono audio to stereo. Create mono audio stream.
 * Feature: Speed up DVD conversion significantly by using IFO data instead of probing each chapter.
 * Feature: Add DVD angle support.Chapters with angles will show as separate files.
+* Feature: Speed up Bluray conversion significantly by using the directory instead of probing each chapter.
 
 * Fix deprecation:
 
